--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     <div id="container">
         <h2 id="title">Altura de Sala</h3>
             <div class="input-container">
-                <label for="alturaSala">Altura de sala</label>
+                <label for="alturaSala">Altura de sala:</label>
                 <input type="text" id='alturaSala' placeholder="altura sala en metros">
             </div class="input-container">
             <h2 id="title">Calcular Panelado Roble</h3>
                 <form id="calc-container">
                     <div class="input-container">
-                        <label for="longPol">Longitud polilineas</label>
+                        <label for="longPol">Longitud polilineas:</label>
                         <input type="text" id='longPol'
                             placeholder="longitud polilineas en metros, separadas por comas">
                     </div>
                     <div class="input-container">
-                        <label for="longBanq">Longitud Banquette</label>
+                        <label for="longBanq">Longitud Banquette:</label>
                         <input type="text" id='longBanq' placeholder="longitud banquette verde en metros">
                     </div>
                 </form>
@@ -32,10 +32,10 @@
                     <button id="calc-btn" onclick="calcRoble()">Calcular</button>
                 </div class="input-container">
                 <h3 id="result">Resultado</h3>
-                <h2 id="title">Calcular Panelado listones</h3>
+                <h2 id="title">Calcular Panelado listones:</h3>
                     <form id="calc-container">
                         <div class="input-container">
-                            <label for="longPolList">Longitud polilineas</label>
+                            <label for="longPolList">Longitud polilineas:</label>
                             <input type="text" id='longPolList'
                                 placeholder="longitud polilineas en metros, separadas por comas">
                         </div>
