--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="wclassth=device-wclassth, initial-scale=1.0">
     <title>Calculadora trabajo</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <div id="container">
-        <h2 id="title">Altura de Sala</h3>
+    <div class="container">
+        <h2 class="title">Altura de Sala</h2>
             <div class="input-container">
                 <label for="alturaSala">Altura de sala:</label>
                 <input type="text" id='alturaSala' placeholder="altura sala en metros">
             </div class="input-container">
-            <h2 id="title">Calcular Panelado Roble</h3>
-                <form id="calc-container">
+            <h2 class="title">Calcular Panelado Roble</h2>
+                <form class="calc-container">
                     <div class="input-container">
                         <label for="longPol">Longitud polilineas:</label>
                         <input type="text" id='longPol'
-                            placeholder="longitud polilineas en metros, separadas por comas">
+                            placeholder="longitud polilineas en metros">
                     </div>
                     <div class="input-container">
                         <label for="longBanq">Longitud Banquette:</label>
@@ -29,21 +29,35 @@
                     </div>
                 </form>
                 <div class="calc-button">
-                    <button id="calc-btn" onclick="calcRoble()">Calcular</button>
+                    <button class="calc-btn" onclick="calcRoble()">Calcular</button>
                 </div class="input-container">
                 <h3 id="result">Resultado</h3>
-                <h2 id="title">Calcular Panelado listones:</h3>
-                    <form id="calc-container">
+                <h2 class="title">Calcular Panelado listones:</h2>
+                    <form class="calc-container">
                         <div class="input-container">
                             <label for="longPolList">Longitud polilineas:</label>
                             <input type="text" id='longPolList'
-                                placeholder="longitud polilineas en metros, separadas por comas">
+                                placeholder="longitud polilineas en metros">
                         </div>
                     </form>
                     <div class="calc-button">
-                        <button id="calc-btn1" onclick="calcListones()">Calcular</button>
+                        <button class="calc-btn1" onclick="calcListones()">Calcular</button>
                     </div>
                     <h3 id="result1">Resultado</h3>
+
+                    <h2 class="title">Calcular Banquettes:</h2>
+                        <form class="calc-container">
+                            <div class="input-container">
+                                <label for="wantedBanq">Longitud banquette:</label>
+                                <input type="text" id='wantedBanq'
+                                    placeholder="longitud del banco en milimetros, máximo 8800">
+                            </div>
+                        </form>
+                        <div class="calc-button">
+                            <button class="calc-btn2" onclick="calcBanq()">Calcular</button>
+                        </div>
+                        <h3 id="result2">Resultado</h3>
+
     </div>
 </body>
 <script src="app.js"></script>
