--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <label for="wantedBanq">
                     Longitud deseada:
                 </label>
-                <input type="text" id="wantedBanq" placeholder="Longitud en milimetros">
+                <input type="text" id="wantedBanq" placeholder="Longitud en milimetros, máximo 8800">
             </li>
             <li>
                 <button onclick="calcBanq()">Calcular
